<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_def"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_def"
        app:layout_constraintBottom_toTopOf="@id/text_cus"
        app:layout_constraintEnd_toStartOf="@id/action_def"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/action_def"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_def"
        app:layout_constraintBaseline_toBaselineOf="@id/text_def"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/text_def" />

    <com.example.android.accessible.CustomTextView
        android:id="@+id/text_cus"
        style="@style/Widget.MaterialComponents.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/text_acc"
        android:text="@string/text_cus"
        app:layout_constraintBottom_toBottomOf="@id/center"
        app:layout_constraintEnd_toStartOf="@id/action_cus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_def" />

    <com.example.android.accessible.CustomButton
        android:id="@+id/action_cus"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/action_acc"
        android:text="@string/action_cus"
        app:layout_constraintBaseline_toBaselineOf="@id/text_cus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/text_cus" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/center" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".5" />

</androidx.constraintlayout.widget.ConstraintLayout>
